Update PR analysis test cases (#1019)